# ts-sas-legacy-analytics

./: BANKING_MIGRATION_ASSESSMENT.md  CONSOLIDATED_MIGRATION_ASSESSMENT.md  INSURANCE_MIGRATION_ASSESSMENT.md  README.md  REPORTS_MIGRATION_ASSESSMENT.md  SAS_MIGRATION_ASSESSMENT.md  migration_inventory.csv
python/: .gitignore  pyproject.toml  requirements.txt
python/src/sas_utils/core/: parmv.py
python/src/sas_utils/data_manipulation/: date_utils.py  hash_lookup.py  transpose.py
python/src/sas_utils/data_validation/: check_if_empty.py  get_data_attr.py  is_num.py  nobs.py  varexist.py  varlist.py
python/src/sas_utils/db/: sqlserver.py
python/src/sas_utils/email/: sendmail.py
python/src/sas_utils/export_import/: excel2sas.py  (+1 more)
python/tests/: conftest.py
python/tests/test_core/: test_parmv.py
python/tests/test_data_manipulation/: test_date_utils.py  test_hash_lookup.py  test_transpose.py
python/tests/test_data_validation/: test_check_if_empty.py  test_get_data_attr.py  test_is_num.py  test_nobs.py  test_varexist.py  test_varlist.py
python/tests/test_db/: test_sqlserver.py
python/tests/test_email/: test_sendmail.py
python/tests/test_export_import/: test_export_dbms.py
python/tests/test_filesystem/: test_dirlist.py
python/tests/test_framework/: test_count_words.py  test_dump_mvars.py  test_loop.py  test_seplist.py  test_squote.py  test_symget.py
python/tests/test_orchestration/: test_run_all.py
python/tests/test_reporting/: test_logparse.py
python/tests/test_string_utils/: test_attrib.py  test_dedup.py  test_justify.py  test_splitvar.py
(+72 files in other folders)
