[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sas-utils"
version = "0.1.0"
description = "Python migration of SAS macro library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Unlicense"}
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyreadstat>=1.2",
    "sqlalchemy>=2.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
db = ["pyodbc>=5.0"]
ldap = ["ldap3>=2.9"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
